@@ -2,7 +2,7 @@
     fuse iconv module: file name charset conversion
     Copyright (C) 2007  Miklos Szeredi <miklos@szeredi.hu>
 
-    This program can be distributed under the terms of the GNU LGPL.
+    This program can be distributed under the terms of the GNU LGPLv2.
     See the file COPYING.LIB
 */
 
