@@ -2,7 +2,7 @@
     fuse subdir module: offset paths with a base directory
     Copyright (C) 2007  Miklos Szeredi <miklos@szeredi.hu>
 
-    This program can be distributed under the terms of the GNU LGPL.
+    This program can be distributed under the terms of the GNU LGPLv2.
     See the file COPYING.LIB
 */
 
