@@ -2,7 +2,7 @@
     libulockmgr: Userspace Lock Manager Library
     Copyright (C) 2006  Miklos Szeredi <miklos@szeredi.hu>
 
-    This program can be distributed under the terms of the GNU LGPL.
+    This program can be distributed under the terms of the GNU LGPLv2.
     See the file COPYING.LIB
 */
 
